Closed Bug 579803 Opened 14 years ago Closed 14 years ago

warning: comparison between signed and unsigned integer expressions in nsOutlookCompose::FillMailBuffer

Categories

(MailNews Core :: Import, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

mailnews/import/outlook/src/nsOutlookCompose.cpp:
 In static member function ‘static nsresult nsOutlookCompose::FillMailBuffer(ReadFileState*, SimpleBufferTonyRCopiedTwice&)’:
938: warning: comparison between signed and unsigned integer expressions
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #458231 - Flags: review?(bienvenu)
Attachment #458231 - Flags: review?(bienvenu) → review+
http://hg.mozilla.org/comm-central/rev/cfd97820eb34
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: