Bug 579803 warning: comparison between signed and unsigned integer expressions in nsOutlookCompose::FillMailBuffer r=bienvenu

--HG--
extra : rebase_source : 90f97a5aaa0bc757ff0d26bd0497c422215819b2